--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kareem-aez.github.io/Sportify/" />
+    <meta property="og:url" content="https://kareem-aez.github.io/GMN/" />
     <meta property="og:title" content="Guess My Number" />
     <meta
       property="og:description"
@@ -20,7 +20,6 @@
       property="og:image"
       content="https://kareem-aez.github.io/GMN/aesthetics/OG.png"
     />
-    <meta property="og:image" content="aesthetics/OG.png" />
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -33,7 +32,6 @@
       name="twitter:image"
       content="https://kareem-aez.github.io/GMN/aesthetics/twitter.png"
     />
-    <meta name="twitter:image" content="aesthetics/twitter.png" />
 
     <!--  icon -->
     <link rel="shortcut icon" href="aesthetics/logo.svg" type="image/x-icon" />
